--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "java -jar cli.jar generate -i swagger.yaml -l nodejs-server && node index.js",
+    "start": "java -jar swagger-codegen-cli-2.4.12.jar generate -i swagger.yaml -l nodejs-server && node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
